--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "type": "module",
   "main": "dist/main/main.js",
   "scripts": {
-    "prebuild": "rm -rf dist",
+    "ensure:native": "npm run ensure:runtime-native",
+    "ensure:runtime-native": "node ./scripts/ensure-runtime-native-modules.mjs",
+    "prebuild": "npm run ensure:native && npm --prefix ../dashboard run build && rm -rf dist",
+    "predev": "npm run ensure:native && npm --prefix ../dashboard run build",
+    "prestart": "npm run ensure:native && npm --prefix ../dashboard run build",
     "build": "npm run build:main && npm run build:renderer",
     "build:main": "tsc -p tsconfig.main.json",
     "build:renderer": "vite build",
     "dev": "concurrently -k \"npm:dev:renderer\" \"npm:dev:main\" \"npm:dev:electron\"",
     "dev:renderer": "vite",
     "dev:main": "tsc -p tsconfig.main.json --watch --preserveWatchOutput",
-    "dev:electron": "wait-on tcp:5174 file:dist/main/main.js && cross-env VITE_DEV_SERVER_URL=http://127.0.0.1:5174 electron .",
+    "dev:electron": "wait-on tcp:5174 file:dist/main/main.js file:dist/main/preload.cjs && cross-env VITE_DEV_SERVER_URL=http://127.0.0.1:5174 electron .",
     "start": "electron ."
   },
   "dependencies": {
