--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "start": "electron ."
   },
   "dependencies": {
-    "electron": "^31.6.0"
+    "@walletconnect/ethereum-provider": "^2.17.0",
+    "electron": "^31.6.0",
+    "ethers": "^6.13.0",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
